[tool.poetry]
name = "srmudp"
version = "0.0.1"
description = ""
authors = ["rid <rid_dim@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pycryptodome = "^3.22.0"
ecdsa = "^0.19.1"
pyzmq = "^26.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
